add functionality to read text from PDF files

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PDF to Audio</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
 </head>
 <body>
+  <h1>Upload a PDF</h1>
+  <input type="file" id="pdfInput" accept="application/pdf" />
 
   <script src="script.js"></script>
 </body>
