--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
   <h1>Upload a PDF</h1>
   <input type="file" id="pdfInput" accept="application/pdf" />
 
+  <h1>Text-to-Speech Example</h1>
+  <label for="voiceSelect">Choose a voice:</label>
+  <select id="voiceSelect">
+    <option value="" disabled selected>Loading voices...</option>
+  </select>
+  <br><br>
+
+  <textarea id="textInput" rows="5" cols="50" placeholder="Enter text to speak here..."></textarea>
+  <br>
+  <button id="speakButton">Speak Text</button>
+
   <script src="script.js"></script>
 </body>
 </html>
