add util folder
move logic for reading pdfs from main script into util file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PDF to Audio</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
+  
 </head>
 <body>
   <h1>Upload a PDF</h1>
@@ -21,6 +22,6 @@
   <br>
   <button id="speakButton">Speak Text</button>
 
-  <script src="script.js"></script>
+  <script src="script.js" type="module"></script>
 </body>
 </html>
